[metadata]
name = AnilistPython
version = 1.0.0
author = Kevin L.
author_email = kevinliu@vt.edu
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = AnilistPython
packages = find:
python_requires = >=3.6

[options.packages.find]
where = AnilistPython